# Object-Detection-and-Navigation-with-TurtleBot3-and-Qualcomm-RB5

./: README.md  requirement.txt
assets/UI/: package-lock.json  package.json
assets/UI/src/: Teleop.css  art.css
assets/UI/src/components/: Home.jsx  Map.jsx  RobotState1.jsx  Sample.jsx  TeleopState.jsx  Teleoperation.jsx
assets/UI/src/scripts/: config.js
assets/bbox_ex_msgs/: CMakeLists.txt
assets/frontier_exploration_turtlebot/: CMakeLists.txt
assets/frontier_exploration_turtlebot/include/frontier_exploration_turtlebot/: CollisionDetector.h  PathPlanning.h
assets/frontier_exploration_turtlebot/launch/: demo.launch
assets/frontier_exploration_turtlebot/src/: CollisionDetector.cpp  PathPlanning.cpp  main.cpp
assets/frontier_exploration_turtlebot/test/: CollisionDetectorTest.cpp  PathPlanningTest.cpp  Test.launch  main.cpp
assets/move_robot/: CMakeLists.txt  package.xml
assets/move_robot/launch/: test.launch
assets/move_robot/msg/: ObjectFound.msg
assets/move_robot/scripts/: Test.py  sample.py
assets/object_detection/: CMakeLists.txt  package.xml
assets/object_detection/launch/: rb5_obj_detection.launch
assets/object_detection/msg/: FloatList.msg
assets/object_detection/scripts/: MC.py  rb5_object_detection.py
assets/whisper_pkg/: CMakeLists.txt  package.xml
assets/whisper_pkg/launch/: whisper.launch
assets/whisper_pkg/scripts/: coco_90.json  inference_mic.py  whisper_speech_recognize.py
